# airband-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  poc_macos.yaml
docs/: IMPLEMENTATION_PLAN.md
examples/: eval_samples.jsonl  frames.jsonl
scripts/: capture_macos.sh  run_demo.sh  verify_pipeline.sh
src/airband_monitor/: __init__.py  alert.py  classifier.py  classifier_backend.py  config.py  evaluation.py  ingest.py  main.py  recorder.py  retention.py  rtl_airband_source.py  scoring.py  spectrum.py  storage.py  watch_state.py  wav_source.py  yamnet.py
tests/: test_classifier.py  test_classifier_backend.py  test_evaluation.py  test_ingest.py  test_main_watch.py  test_recorder.py  test_rtl_airband_source.py  test_scoring.py  test_spectrum.py  test_storage.py  test_storage_recent.py  test_watch_state.py  test_wav_source.py
